@@ -1,3 +1,5 @@
     * jabberd14 now uses an automake/autoconf build environment
     * jabberd14 now handles negative priorities and won't consider sessions
       with negative priority for default delivery
+    * the server will now unsubscribe all subscriptions when an user
+      unregisters his account
